--- a/main.html
+++ b/main.html
@@ -15,5 +15,18 @@
         <a href="#">Contact</a>
         <a href="#">more</a>
     </nav>
+    <form class="" action="main.html" method="post" name="myform" onsubmit="return validateform()">
+        enter name:<input type="text" name="mname" value=""><br>
+        <input type="submit" name="" value="submit">
+    </form>
+    <script type="text/javascript">
+        function validateform() {
+            var data=document.forms["myform"]["mname"].values;
+            if(data == ""){
+                alert("plz fill the form");
+                return false;
+            }
+        }
+    </script>
 </body>
 </html>
