--- a/main.html
+++ b/main.html
@@ -31,7 +31,7 @@
         }
     </script> -->
 
-<script>
+<!-- <script>
      function validate() {
       
       if( document.myForm.Name.value == "" ) {
@@ -96,6 +96,10 @@
            
         </table>
      </form>      
-</center>
+</center> -->
+
+
+
+
 </body>
 </html>
