--- a/logpage.html
+++ b/logpage.html
@@ -15,31 +15,40 @@
          <div class="form-control">
             <label for="username">Username</label>
             <input type="text" id="username" placeholder="Enter your name">
-            <small>Error Message</small>
+            <!-- <small>Error Message</small> -->
          </div>
 
-
-         <div class="form-control">
-            <label for="email">Email</label>
-            <input type="text" id="email" placeholder="Enter your email">
-            <small>Error Message</small>
-         </div>
 
          <div class="form-control">
             <label for="password">Password</label>
             <input type="text" id="password" placeholder="Enter your password">
-            <small>Error Message</small>
+            <!-- <small>Error Message</small> -->
          </div>
 
-         <div class="form-control">
+         <!-- <div class="form-control">
             <label for="password">Confirm password</label>
             <input type="text" id="username" placeholder="Enter your Confirm password">
-            <small>Error Message</small>
-         </div>
+            <!-- <small>Error Message</small> -->
+         
          <button>submit</button>
     </form>
 </div>
 
-    <script src="script.js"></script>
+    <script src="script.js">
+    if(username=="ashok")
+    {
+        password("login succesfully");
+        return false;
+    }
+    if(username=="ramu"&& password=="ramu@123")
+    {
+        alert("login succesfully");
+        return false;
+    }
+else{
+    alert("incorect username & password");
+}
+      
+    </script>
 </body>
 </html>
