--- a/welcom.html
+++ b/welcom.html
@@ -7,6 +7,19 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>welcome!......</h1>
+    <div>
+   <div style="display: flex;justify-content: space-between;">
+    <h1 style="color: rgb(255, 0, 234);">welcome!......</h1>
+   </div>
+    <div style="color: rgb(0, 217, 255);font-size: 20px;font-weight:600 ; text-decoration: none;">
+   
+    <nav>
+        <a href="#"  >HOME</a>
+        <a href="#" >ABOUT</a>
+        <a href="#" >HELP</a>
+        <a href="#" >LOGOUT</a>
+    </nav>
+    </div>
+   </div>
 </body>
 </html>
