--- a/welcom.html
+++ b/welcom.html
@@ -4,22 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>welcome page</title>
+    <link rel="stylesheet" href="welcome.css">
 </head>
 <body>
+    <header>
+        <div class="container">
+            <div class="navbar">
+                <a href="#" class="logo">my logo</a>
+                  <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">Sign Up</a></li>
+                  </ul>
+            </div>
+<div class="content">
+    <h1>welcome to your page</h1>
+    <p>iejrweilkjr qwekjef ewklwe werwe qwerwer erwr.
+        erkwerk werwer erkme erwer erwerer jkerjejr.
+    </p>
     <div>
-   <div style="display: flex;justify-content: space-between;">
-    <h1 style="color: rgb(255, 0, 234);">welcome!......</h1>
-   </div>
-    <div style="color: rgb(0, 217, 255);font-size: 20px;font-weight:600 ; text-decoration: none;">
-   
-    <nav>
-        <a href="#"  >HOME</a>
-        <a href="#" >ABOUT</a>
-        <a href="#" >HELP</a>
-        <a href="#" >LOGOUT</a>
-    </nav>
+        <button><span></span>More</button>
+        <button><span></span>Subscribe</button>
     </div>
-   </div>
+</div>
+        </div>
+    </header>
 </body>
 </html>
