--- a/19th.html
+++ b/19th.html
@@ -24,8 +24,8 @@
             </div>
            <button class="sign">SIGN IN</button><br>
            <div class="add">
-           <input type="checkbox" id="vehicle1" name="" value="" > <small class="reme">Remember Me</small> 
-           <a href="#" ><small>forgot password</small></a>
+           <!-- <input type="checkbox" id="vehicle1" name="" value="" > <small class="reme">Remember Me</small>  -->
+           <a href="#" ><small>Forgot Password</small></a>
            </div><br>
            <small class="font">-Or Sign In With-</small><br>
            <div >
