--- a/19th.html
+++ b/19th.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>19th </title>
     <link rel="stylesheet" href="19th.css">
    <script src="19th.js"></script>
 </head>
@@ -24,7 +24,6 @@
             </div>
            <button class="sign">SIGN IN</button><br>
            <div class="add">
-           <!-- <input type="checkbox" id="vehicle1" name="" value="" > <small class="reme">Remember Me</small>  -->
            <a href="#" ><small>Forgot Password</small></a>
            </div><br>
            <small class="font">-Or Sign In With-</small><br>
